# GPU_model

GPU_P3P/: P3PSolver.cpp  RANSAC.cpp  RANSAC.h  kernelP3P.cu  kernelP3P.cuh  mainP3P.cpp
GPU_P3P/Paratxt/: Camera.txt  mapfeature1.txt  matchfeature1.txt  parameter_DataSize1.txt
GPU_VO/: CMakeLists.txt  MapManagement.h  P3P.h  P3PSolver.cpp  RANSAC.cpp  kernelP3P.cu  kernelP3P.cuh  main.h  mainP3P.cpp
GPU_VO/Paratxt/: mapfeature.txt  matchfeature.txt  parameter_DataSize.txt
VO/: CMakeLists.txt  DataAssociation.cpp  DataAssociation.h  MapManagement.cpp  MapManagement.h  P3PSolver.cpp  RANSAC.cpp  RANSAC.h  SURF.cpp  SURF.h  VO.cpp  VO.h  kernelVO.cu  kernelVO.cuh  main.cpp  main.h  match.cu  match.cuh
VO/Paratxt/: Parameter.txt
matching/: CMakeLists.txt  Matching_performance.xlsx  NVPModel.docx  kernel.cu  kernel.cuh  main.cpp  surf&datasize.xlsx  time.xlsx
